update the title

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 	<body>
 
 		<div class="container">
-			<h1>História dos Jogos Eletrônicos</h1>
-			<h2><span class="step1">1950</span> <span class="step2">até</span> <span class="step3">Hoje</span></h2>
-			<p class="lead">Uma linha do tempo em constante evolução, sobre a história dos jogos eletrônicos.</p>
+			<h1>History of Nepal</h1>
+			<h2><span class="step1">1740</span> <span class="step2">Until</span> <span class="step3">Today</span></h2>
+			<p class="lead">A constantly evolving timeline on the history of Nepal.</p>
 
 			<div id="timeline" class="timeline-container"></div>
 		</div><!-- /.container -->
